--- a/README.org
+++ b/README.org
@@ -4,6 +4,6 @@ To run the code you will need odin installed and just (or simply read the justfi
 
 To run the code for day 1 for example, do the following:
 
-```
+#+BEGIN_SRC 
 just run 1
-```
+#+END_SRC
