--- a/day3/README.org
+++ b/day3/README.org
@@ -1,11 +1,11 @@
 * I cheated, i used regex
 For part 1 I used
 #+BEGIN_SRC
-rg -o "$*mul\([0-9]{1,3},[0-9]{1,3}\)"
+rg -o "$*mul\([0-9]{1,3},[0-9]{1,3}\)" > test.txt
 #+END_SRC
 And for part 2
 #+BEGIN_SRC
-rg -o "$*(mul\([0-9]{1,3},[0-9]{1,3}\)|do\(\)|don't\(\))"
+rg -o "$*(mul\([0-9]{1,3},[0-9]{1,3}\)|do\(\)|don't\(\))" > test2.txt
 #+END_SRC
 
 Then I used the multicursors functionality in my editor to modify the results to make it easier to parse.
